feat(pages): updated permit2 support
Added Support for Permit2 SDK

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "nextarter-chakra",
-  "name": "Next.js App Template",
+  "short_name": "Permit2 Uniswap",
+  "name": "Permit 2 Uniswap Demo",
   "lang": "en",
   "start_url": "/",
   "background_color": "#FFFFFF",
