--- a/package.json
+++ b/package.json
@@ -26,7 +26,13 @@
     "@chakra-ui/react": "^2.8.1",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@ethersproject/providers": "^5.7.2",
+    "@uniswap/conedison": "^1.8.0",
+    "@uniswap/permit2-sdk": "^1.2.0",
+    "dotenv": "^16.3.1",
+    "ethers": "^5.7.2",
     "framer-motion": "^10.16.4",
+    "ms": "^2.1.3",
     "next": "^13.5.4",
     "next-pwa": "^5.6.0",
     "react": "^18.2.0",
